force-app/main/default/objects/cgcloud__Batch_Process_Configuration__c/cgcloud__Batch_Process_Configuration__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Batch Process Configuration</label>
</CustomObject>