force-app/main/default/objects/cgcloud__Batch_Process_Configuration__c/fields/cgcloud__Apex_Class__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Apex_Class__c</fullName>
    <description>Batch process class that should be executed.</description>
    <inlineHelpText>Batch process class that should be executed.</inlineHelpText>
    <label>Apex Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>