force-app/main/default/objects/cgcloud__Batch_Process_Configuration__c/fields/cgcloud__Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Batch_Size__c</fullName>
    <label>Batch Size</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>