force-app/main/default/objects/cgcloud__Batch_Process_Configuration__c/fields/cgcloud__Execute_Nightly_Calculation__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Execute_Nightly_Calculation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check whether execute nightly calculation batch</description>
    <label>Execute Nightly Calculation</label>
    <type>Checkbox</type>
</CustomField>