force-app/main/default/objects/cgcloud__Batch_Process_Configuration__c/fields/cgcloud__Friday__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Friday__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Friday</label>
    <type>Checkbox</type>
</CustomField>