force-app/main/default/objects/cgcloud__Batch_Process_Configuration__c/fields/cgcloud__Last_Run__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Last_Run__c</fullName>
    <description>Time when the server for this sales org was last started.</description>
    <inlineHelpText>Time when the server for this sales org was last started.</inlineHelpText>
    <label>Last Run</label>
    <type>DateTime</type>
</CustomField>