force-app/main/default/objects/cgcloud__Batch_Process_Configuration__c/fields/cgcloud__Monday__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Monday__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Monday</label>
    <type>Checkbox</type>
</CustomField>