force-app/main/default/objects/cgcloud__Batch_Process_Configuration__c/fields/cgcloud__Promotion_Template__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Promotion_Template__c</fullName>
    <description>The order of this list is very important due this will be the order of the messages that will be sent.</description>
    <label>Promotion Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>