force-app/main/default/objects/cgcloud__Batch_Process_Configuration__c/fields/cgcloud__Query_Limit__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Query_Limit__c</fullName>
    <label>Query Limit</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>