force-app/main/default/objects/cgcloud__Batch_Process_Configuration__c/fields/cgcloud__Refresh_Account_Product_List__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Refresh_Account_Product_List__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To identify the mode of Account Product List</description>
    <label>Refresh Account Product List</label>
    <type>Checkbox</type>
</CustomField>