force-app/main/default/objects/cgcloud__Batch_Process_Configuration__c/fields/cgcloud__Run_Mode__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Run_Mode__c</fullName>
    <description>Allowed values are Full and Delta, this field is relevant to Complex Pricing.</description>
    <label>Run Mode</label>
    <length>50</length>
    <type>Text</type>
</CustomField>