force-app/main/default/objects/cgcloud__Batch_Process_Configuration__c/fields/cgcloud__Sales_Org__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Sales_Org__c</fullName>
    <description>Sales Org for which this setting is defined.</description>
    <inlineHelpText>Sales Org for which this setting is defined.</inlineHelpText>
    <label>Sales Org</label>
    <length>4</length>
    <type>Text</type>
</CustomField>