force-app/main/default/objects/cgcloud__Batch_Process_Configuration__c/fields/cgcloud__Saturday__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Saturday__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Saturday</label>
    <type>Checkbox</type>
</CustomField>