force-app/main/default/objects/cgcloud__Batch_Process_Configuration__c/fields/cgcloud__Start_Time__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Start_Time__c</fullName>
    <description>Time when the Server should be started. Restricted to full hours. Will be stored in GMT+0 (UTC). 24h format.</description>
    <inlineHelpText>Time when the Server should be started. Restricted to full hours. Will be stored in GMT+0 (UTC). 24h format.</inlineHelpText>
    <label>Start Time</label>
    <length>2</length>
    <type>Text</type>
</CustomField>