force-app/main/default/objects/cgcloud__Batch_Process_Configuration__c/fields/cgcloud__Sunday__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Sunday__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sunday</label>
    <type>Checkbox</type>
</CustomField>