force-app/main/default/objects/cgcloud__Batch_Process_Configuration__c/fields/cgcloud__Thursday__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Thursday__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Thursday</label>
    <type>Checkbox</type>
</CustomField>