force-app/main/default/objects/cgcloud__Batch_Process_Configuration__c/fields/cgcloud__Tuesday__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Tuesday__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tuesday</label>
    <type>Checkbox</type>
</CustomField>