force-app/main/default/objects/cgcloud__Batch_Process_Configuration__c/fields/cgcloud__Wednesday__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Wednesday__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Wednesday</label>
    <type>Checkbox</type>
</CustomField>